// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Default
  </span>
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`Storyshots Button Google 1`] = `
<button
  className="ant-btn google-0-2-1 ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="google"
    className="anticon anticon-google"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="google"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
      />
    </svg>
  </span>
  <span>
    Sign in with Google
  </span>
</button>
`;

exports[`Storyshots Button Loading 1`] = `
<button
  className="ant-btn ant-btn-default ant-btn-loading"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="ant-btn-loading-icon"
  >
    <span
      aria-label="loading"
      className="anticon anticon-loading"
      role="img"
    >
      <svg
        aria-hidden="true"
        className="anticon-spin"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </span>
  <span>
    Loading
  </span>
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Primary
  </span>
</button>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Primary Disabled
  </span>
</button>
`;

exports[`Storyshots Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="container-0-2-2"
  >
    <div>
      <div
        className="container-0-2-3 required-0-2-4"
      >
        First Name
      </div>
      <div
        className="container-0-2-5 container-d0-0-2-8"
      >
        <input
          className="ant-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div>
      <div
        className="container-0-2-3"
      >
        Last Name
      </div>
      <div
        className="container-0-2-5 container-d1-0-2-9"
      >
        <input
          className="ant-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      className="ant-btn ant-btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        Submit
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Icon Custom 1`] = `
<img
  alt="https://dummyimage.com/600x400/000/fff&text=Dassana"
  height={64}
  src="https://dummyimage.com/600x400/000/fff&text=Dassana"
/>
`;

exports[`Storyshots Icon Predefined 1`] = `
<img
  alt="dassana-orange"
  height={64}
  src="dassana-orange.png"
/>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="container-0-2-5 container-d2-0-2-10"
>
  <input
    className="ant-input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Error 1`] = `
<div
  className="container-0-2-5 container-d6-0-2-16"
>
  <input
    className="ant-input error-0-2-6"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Full Width 1`] = `
<div
  className="container-0-2-5 container-d5-0-2-15"
>
  <input
    className="ant-input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Loading 1`] = `
<div
  className="container-0-2-5 container-d4-0-2-12"
>
  <div
    className="input-0-2-7"
  >
    <span
      className="container-0-2-13 container-d0-0-2-14"
    >
       
    </span>
  </div>
</div>
`;

exports[`Storyshots Link Click 1`] = `
<a
  className="ant-typography"
  onClick={[Function]}
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
  target="_self"
>
  <u>
    Click
  </u>
</a>
`;

exports[`Storyshots Link Href 1`] = `
<a
  className="ant-typography"
  href=" "
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
  target="_self"
>
  <u>
    Href
  </u>
</a>
`;

exports[`Storyshots Skeleton Circle 1`] = `
<span
  className="container-0-2-13 container-d2-0-2-18"
>
   
</span>
`;

exports[`Storyshots Skeleton Count 1`] = `
Array [
  <span
    className="container-0-2-13 container-d3-0-2-19"
  >
     
  </span>,
  <span
    className="container-0-2-13 container-d3-0-2-19"
  >
     
  </span>,
  <span
    className="container-0-2-13 container-d3-0-2-19"
  >
     
  </span>,
  <span
    className="container-0-2-13 container-d3-0-2-19"
  >
     
  </span>,
  <span
    className="container-0-2-13 container-d3-0-2-19"
  >
     
  </span>,
]
`;

exports[`Storyshots Skeleton Default 1`] = `
<span
  className="container-0-2-13 container-d1-0-2-17"
>
   
</span>
`;

exports[`Storyshots Tag Colored 1`] = `
<span
  className="ant-tag ant-tag-has-color"
  style={
    Object {
      "backgroundColor": "#108ee9",
    }
  }
>
  Colored
</span>
`;

exports[`Storyshots Tag Colored Preset 1`] = `
<span
  className="ant-tag ant-tag-blue"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Blue
</span>
`;

exports[`Storyshots Tag Default 1`] = `
<span
  className="ant-tag"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Default
</span>
`;

exports[`Storyshots Toggle Checked Disabled 1`] = `
<button
  aria-checked={true}
  className="ant-switch ant-switch-checked ant-switch-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;

exports[`Storyshots Toggle Default 1`] = `
<button
  aria-checked={true}
  className="ant-switch ant-switch-checked"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;

exports[`Storyshots Toggle Disabled 1`] = `
<button
  aria-checked={false}
  className="ant-switch ant-switch-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;
